# spotdl-cli

./: .cache-phcreery  .gitignore  .replit  README.md  main.py  pyproject.toml  reference.md  requirements.txt  some_file.txt  spotdlRunner.py
lib/: AlbumTrackField.py  ArtistTrackField.py  CollectionForm.py  DetailField.py  DetailForm.py  DirectoryForm.py  DownloadForm.py  FolderField.py  NotifyPopup.py  QueueField.py  SearchForm.py  TrackField.py  initForm.py  spotq.py  theme.py  ui.py
npyscreen/: __init__.py  fmForm.py  npysThemes.py  wgmultiline.py  wgtextbox.py  wgwidget.py
queue/: TheChainsmokers-ThisFeeling.m4a
spotdl/: spotdl.py  workspace.code-workspace  youtube_tools.py
tui/: __init__.py  general.py  kbd.py  listing.py  manualkbd.py  option.py  style.py
