[tool.poetry]
name = "spoticli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
npyscreen = "^4.10"
spotipy = "^2.7"
mutagen = "^1.43"
pafy = "^0.5.5"
slugify = "^0.0.1"
titlecase = "^0.12.0"
appdirs = "^1.4"
bs4 = "^0.0.1"
logzero = "^1.5"
lyricwikia = "^0.1.11"
PyYAML = "^5.3"
unicode-slugify = "^0.1.3"
youtube_dl = "^2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
